--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
 .MuiInputBase-input {
   border-bottom: 2px solid #333333;
 }
